--- a/style.css
+++ b/style.css
@@ -526,6 +526,10 @@ button:focus{
     color: #ffffff;
 }
 
+.projects-list__item-img{
+    height: 100%;
+}
+
 .projects-list__item {
     position: relative;
     overflow: hidden;
@@ -1420,7 +1424,7 @@ button:focus{
 }
 
 .services-this{
-    /* margin: 0 15px; */
+    margin-right:15px;
     flex: 1.5;
 }
 
@@ -1432,8 +1436,10 @@ button:focus{
 
 .service-this-definition{
     display: block;
+    margin: 23px 0 100px 0;
     font-family: 'Stolzl Light';
-    font-size: 24px;
+    font-size: 21px;
+    line-height: 35px;
 }
 
 .show-cases{
@@ -1507,7 +1513,6 @@ button:focus{
 .how-affect {
     position: relative;
     background: #f3f5f6;
-    height: 680px;
     display: flex;
     align-items: center;
 }
@@ -1516,6 +1521,7 @@ button:focus{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 102px 15px 120px 15px;
 }
 
 .how-affect-text {
@@ -1557,7 +1563,7 @@ button:focus{
     align-items: center;
     justify-content: space-between;
     max-width: 310px;
-    margin: 10px 0;
+    margin: 20px 0;
     
 
 }
@@ -1595,7 +1601,7 @@ button:focus{
     align-items: center;
     justify-content: space-between;
     max-width: 310px;
-    margin: 10px 0;
+    margin: 20px 0;
     
 }
 
@@ -1610,7 +1616,6 @@ button:focus{
 /* dev-stage */
 
 .dev-stage{
-    position: relative;
     height: 478px;
     background: url(images/dev-stage-fon.png);
     /* display: flex;
@@ -1656,6 +1661,14 @@ button:focus{
     justify-content: space-around;
     padding: 0 25px;
     position: relative;
+}
+
+.dev-stage-items:first-child {
+    margin: 0 15px 0 0;
+}
+
+.dev-stage-items:last-child {
+    margin: 0 0 0 15px;
 }
 
 .dev-stage-items::after{
@@ -1752,6 +1765,18 @@ background-position-x: 15px;
     align-items: center;
     padding-left: 66px;
 }
+
+.analysis-item-right {
+    margin: 5px 0 5px 15px;
+}
+
+/* .analysis-item:first-child {
+    margin: 5px 15px 5px 0;
+}
+
+.analysis-item:last-child {
+    margin: 5px 0 5px 15px;
+} */
 
 .analysis-item-text {
     display: inline-block;
@@ -2090,6 +2115,11 @@ input[type="checkbox"]:checked + label {
     left: 65%;
 }
 
+.header__paroller-2 {
+    top: 25%;
+    left: 3%;
+}
+
 .service-about__paroller-1 {
     top: 85%;
     left: 90%;
@@ -2120,6 +2150,396 @@ input[type="checkbox"]:checked + label {
     top: 82%;
     left: 81%;
 }
+
+.how-affect__paroller-1 {
+    top: 82%;
+    left: 2%;
+}
+
+.dev-site__paroller-1 {
+    top: -17%;
+    left: 4%;
+}
+
+.dev-site__paroller-2 {
+    top: 57%;
+    left: 86%;
+}
 /* parroler! */
 /* price! */
 /* BRANDING!! */
+
+
+/* WEV-SITE */
+
+/* small-info-service */
+
+.small-info-service {
+    background: #fafafa ;
+}
+
+.small-info-service-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-small-info-service {
+    display: flex;
+    justify-content: space-between;
+    /* padding: 169px 15px 182px 15px; */
+    
+}
+
+.smal-info0service-title {
+    display: block;
+    margin: 12px 0 ;
+    font-family: 'Stolzl Book';
+    font-size: 30px;
+    color: rgba(29, 15, 28, 255);
+}
+
+.small-info-service-cub-title {
+    display: block;
+    margin: 12px 0 ;
+    font-size: 24px;
+    color: rgba(29, 15, 28, 255);
+    line-height: 32px;
+}
+
+.small-info-service-text {
+    display: block;
+    margin: 12px 0 ;
+    font-size: 16px;
+    color: rgba(29, 15, 28, 255);
+    line-height: 26px;
+}
+
+/* small-info-service! */
+
+
+/* how-site */
+
+.container-how-site {
+    display: flex;
+    flex-direction: column;
+    padding: 100px 15px 82px 15px;
+    
+}
+
+.how-site-title {
+    margin-bottom: 51px;
+    font-family: 'Stolzl Book';
+    font-size: 30px;
+}
+
+.how-site-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.how-site-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
+    margin: 0 15px;
+    padding: 25px;
+    border-radius: 15px;
+    background:linear-gradient(to right, #4b2cef, #4dc0eb);
+}
+
+.how-site-item:first-child{
+    margin: 0 15px 0 0;
+}
+.how-site-item:last-child {
+    margin: 0 0 0 15px;
+}
+
+.how-site-item-title {
+    display: block;
+    font-family: 'Stolzl Book';
+    font-size: 14px;
+    color: rgba(255, 255, 255, 255);
+}
+
+.how-site-item-sub-title {
+    display: block;
+    margin: 21px 0 74px 0;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 255);
+    line-height: 26px;
+}
+
+.clock-work {
+    position: relative;
+    display: block;
+    margin: 18px 0;
+    padding: 0 35px;    
+    font-family: 'Stolzl Book';
+    font-size: 12px;
+    color: rgba(255, 255, 255, 255);
+}
+
+.clock-work::before {
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 25px;
+    background: url(images/clock-work-icon.png) no-repeat;
+    left: 0px;
+    top: -7px;
+
+}
+
+.price-site {
+    position: relative;
+    padding: 0 35px; 
+    display: block;
+    font-family: 'Stolzl Book';
+    font-size: 12px;
+    color: rgba(255, 255, 255, 255);
+}
+
+.price-site::before {
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 25px;
+    background: url(images/dolar-icon.png) no-repeat;
+    left: 0px;
+    top: -7px;
+}
+
+.check-price-site {
+    height: 65px;
+    width: 320px;
+    align-self: center;
+    margin-top: 48px;
+    border-radius: 30px;
+    background: #fff;
+    border: 1px solid black;
+    font-family: 'Stolzl Book';
+    font-size: 16px;
+
+}
+
+/* how-site! */
+
+/*dev-stage-site */
+
+
+.dev-stage-site {
+    background: url(images/dev-stage-fon-2.png) no-repeat;
+}
+/* dev-stage-site! */
+
+/* structure-design */
+
+.container-structure-design {
+    display: flex;
+    padding: 65px 15px 49px 15px;
+}
+
+.wrapper-structure-design {
+    align-self: center;
+}
+
+.structure-design-title {
+    display: block;
+    font-family: 'Stolzl Book';
+    font-size: 30px;
+}
+
+.structure-design-sub-title {
+    display: block;
+    margin: 13px 0 37px 0;
+    font-family: 'Stolzl Light';
+    font-size: 18px;
+    color: rgba(120, 120, 120, 255);
+}
+
+.structure-design-work-list {
+    list-style: none;
+}
+
+.structure-design-work-item {
+    position: relative;
+    margin: 15px 0;
+}
+
+.structure-design-work-item::before {
+    content: "";
+    position: absolute;
+    top: calc(50% - 1px);
+    left: 0;
+    width: 20px;
+    height: 2px;
+    background: #e0e0e0;
+}
+
+.structure-design-work-text {
+    display: block;
+    padding: 0 30px;
+    font-family: 'Stolzl Light';
+    font-size: 16px;
+    color: rgba(120, 120, 120, 255);
+}
+
+/* structure-design! */
+
+/* work-design-site */
+
+.work-design-site {
+    background: linear-gradient(to right, #7554b3, #bf76ae)
+}
+
+.container-work-design-site {
+    display: flex;
+}
+
+.wrapper-work-design-site {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 105px 15px 88px 15px;
+}
+
+.work-design-site-title {
+     display: block;
+     align-self: center;
+     font-family: 'Stolzl Book';
+    font-size: 30px;
+    color: rgba(255, 255, 255, 255);
+}
+
+.progect-factory {
+    align-self: end;
+    border: none;
+    background:none;
+    text-decoration: underline;
+    font-size: 18px;
+    color: rgba(255, 255, 255, 255);
+}
+/* work-design-site! */
+
+/* mob-adapt */
+
+.mob-adapt {
+    background: #f3f5f6;
+}
+
+.container-mob-adapt {
+    display: flex;
+    padding: 105px 15px 88px 15px;
+}
+
+.wrapper-mob-adart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.mob-adapt-titel {
+    font-family: 'Stolzl Book';
+    font-size: 33px;
+    line-height: 54px;
+}
+
+.mob-adapt-sub-title {
+    display: block;
+    margin-top: 30px;
+    font-size: 20px;
+    line-height: 32px;
+    color: rgba(120, 120, 120, 255);
+}
+
+/* mob-adapt! */
+
+/* dev-site */
+
+.dev-site {
+    background: url(images/dev-site-fon.png) no-repeat;
+    position: relative;
+}
+
+.container-dev-site {
+    display: flex;
+    padding: 107px 14px 37px 15px;
+}
+
+.wrapper-dev-site {
+    padding-top: 53px;
+    margin-right: 59px;
+}
+
+.dev-site-title {
+    font-family: 'Stolzl Book';
+    font-size: 34px;
+    line-height: 54px;
+}
+
+.dev-site-sub-title {
+    display: block;
+    margin-top: 13px;
+    font-size: 18px;
+    color: rgba(120, 120, 120, 255);
+    line-height: 24px;
+
+}
+
+/* dev-site! */
+
+/* run-site */
+
+.run-site {
+    background: #f3f5f6;
+}
+
+.container-run-site {
+    display: flex;
+    padding: 110px 15px;
+}
+
+.wrapper-run-site {
+    padding-left: 88px;
+}
+
+.run-site-title {
+    font-family: 'Stolzl Book';
+    font-size: 33px;
+}
+
+.run-site-sub-title {
+    display: block;
+    margin: 19px 0 30px 0;
+    font-size: 23px;
+    color: rgba(120, 120, 120, 255);
+}
+
+.good-site-list {
+    list-style: none;
+}
+
+.good-site-item{
+    position: relative;
+}
+
+.good-site-item::before {
+    content: "";
+    position: absolute;
+    top: calc(50% - 1px);
+    left: 0;
+    width: 20px;
+    height: 2px;
+    background: #e0e0e0;
+}
+
+.good-site-text {
+    padding: 0 30px;
+    font-size: 16pt;
+    color: rgba(120, 120, 120, 255);
+}
+
+/* run-site! */
+/* WEB-SITE!! */
