--- a/style.css
+++ b/style.css
@@ -377,6 +377,16 @@ button:focus{
     background-position: right top;
 }
 
+.services-list__item:nth-child(1), 
+.services-list__item:nth-child(4) {
+    margin-left: 0px;
+}
+
+.services-list__item:nth-child(3),
+ .services-list__item:nth-child(6) {
+    margin-right: 0px;
+}
+
 .services-list__item:nth-child(1)::before {
     background-image: url(./images/services-1.png);
 }
@@ -2930,3 +2940,85 @@ border: 1px solid black;
 
 /* presetn-client! */
 /* SERVICE-ADVERTISING! */
+
+/* SERVICE */
+
+ /* header */
+
+ .header-bottom-info-subtitle-text {
+     font-size: 12px;
+     line-height: 22px;
+ }
+
+ .header-bottom-compr {
+     flex: 1
+ }
+
+ .header-bottom__logo-compr {
+     align-self: center;
+     margin: 0 44px 0 56px;
+    flex: 1.6
+ }
+
+ 
+
+ /* header! */
+
+ /* land-services-list */
+
+ .land-services-list {
+     background: url(images/service-list-fon.jpg);
+ }
+
+ .container-land-services-list {
+     display: flex;
+     flex-direction: column;
+     padding: 94px 15px 118px 15px;
+ }
+
+ .land-services-list-title {
+     align-self: center;
+     display: block;
+     margin-bottom: 63px;
+     font-family: 'Stolzl Book';
+     
+    font-size: 30px;
+ }
+
+ .wrapper-service-list {
+
+    display: flex;
+    flex-wrap: wrap;
+ }
+ 
+
+.wrapper-item-top {
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.service-list__item-img {
+    z-index: 1;
+}
+
+.header-bottom__paroller-1 {
+    top:10%;
+    left: 70%;
+}
+
+.header-bottom__paroller-2 {
+    top: 40%;
+    left: 85%;
+} 
+
+.header-bottom__paroller-3 {
+    top: 80%;
+    left: 70%;
+}
+
+
+
+ /* land-services-list! */
+/* SERVICE! */
