--- a/style.css
+++ b/style.css
@@ -1292,6 +1292,10 @@ button:focus{
 }
 
 
+
+  
+
+
 /* BTANDING */
 
 /* header */
@@ -1315,151 +1319,210 @@ button:focus{
 
 /* service-about */
 
-.service-about{
-    display: flex;
-    justify-content: center;
+.service-about {
     background: url(images/branding-services.png) no-repeat;
-    height: 745px;
-    align-items: center;
 }
 
-.container-service-about{
-    position: relative;
+.container-service-about {
     display: flex;
     flex-direction: column;
+    padding: 114px 15px 90px 15px;
 }
 
-.design_choice{
-    margin-bottom: 74px;
+.design_choice {
     align-self: center;
-    font-family:'Stolzl Book';
-    font-size: 40px;
-}
-
-.service{
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-    max-width: 230px;
-    border-radius: 15px;
-    margin-right: 5.5px;
-    justify-content: space-between;
-}
-
-.wrapper-services{
-    margin: 28px;
-}
-
-.service-name{
-    display: block;
+    margin-bottom: 74px;
     font-family: 'Stolzl Book';
-    font-size: 16px;
+    font-size: 30px;
 }
 
-.service-slogan{
-    display: block;
-    font-family: 'Stolzl Light';
-    font-size: 12px;
+.wrapper {
+    height: 420px;
+    display: flex
 }
 
-.service-smal-img{
-    margin: 25px 0 50px 0;
-}
-
-.btn-more-service{
-    margin: 22px 28px;
-    border: 0px;
-    background-color: transparent;
-    text-decoration: underline;
-    align-self: end;
-}
-
-.wrapper-right{
-    display: flex;
-    flex-direction: column;
-    flex:1;
-}
-
-.services-lists{
-    display: flex;
+.wrapper-right {
     flex: 1;
 }
 
-.services-name{
-    font-family:'Stolzl Book';
-    font-size: 21px;
-    margin:6px 0;
-    display: block;
-}
-.services-items{
-    list-style: none;
-    background: #fff;
-    border-radius: 15px; 
-    margin: 0 5.5px;
-    flex:1;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-.services-items a{
-    color: black;
-    text-decoration: none;
-}
-
-.sml-info-service{
-    display: flex;
-    justify-content: space-between;
-    flex: 3;
-    margin-left: 38px;
-    padding-top: 35px;
-}
-
-.sml-info-service-text{
-    width: 466px;
+.service {
+    width: 230px;
+    padding: 27px 0 22px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 0px 10px 74.1px 20.9px rgba(58, 112, 255, 0.22);
 }
 
-.sml-info-service-title{
+.wrapper-services {
+    display: flex;
+    flex-direction: column;
+}
+
+.services-name {
+    width: 100%;
+    height: 100%;
+    padding: 27px 23px 20px 23px;
+    text-decoration: none;
+    color: black;
+    display: block;
+    font-family:'Stolzl Book';
+    font-size: 23px;
+    line-height: 22px;
+}
+
+.service-slogan {
+    display: block;
+    margin: 9px 22px;
+    font-size: 12px;
+    color: rgba(120, 120, 120, 255);
+}
+
+.service-smal-img {
+    margin: auto;
+}
+
+.btn-more-service {
+    align-self: flex-start;
+    margin-top: auto;
+    margin-left: 22px;
+    border: none;
+    background: transparent;
+    text-decoration: underline;
+}
+
+.btn-more-service-advertising {
+    color: #fff;
+}
+
+.services-lists {
+    display: flex;
+    list-style: none;
+    
+}
+
+.services-items {
+    overflow: hidden;
+    height: 90px;
+    flex: 1;
+    margin: 0 5.5px;
+    border-radius: 15px;
+    background: #fff;
+}
+
+.services-items:first-child {
+    margin-left: 11px;
+}
+
+.services-items:last-child {
+    margin-right: 0;
+}
+
+.services-items-title {
+    margin-left: 23px;
     font-family: 'Stolzl Book';
-    font-size: 36px;
-    display: block;
-    margin: 10px 0;
+    font-size: 23px;
 }
 
-.sml-info-service-slogan{
-    font-family:'Stolzl Light';
-    font-size:25px;
-    color: #787878;
-    margin-bottom: 25px;
-    display: block;
+.services-advertising-items-title {
+    color: #fff;
 }
 
-.sml-info-service-we-top{
-    font-size: 20px;
-    border-left:3px solid #5867f5; 
-    padding-left: 17px;
-    display: block;
-    margin: 10px 0;
+.sml-info-service {
+    position: relative;
+    display: flex;
+ 
 }
 
-.cost{
+.sml-info-service-title {
+    font-family: 'Stolzl Book';
+    font-size: 40px;
+}
+
+.sml-info-service-advertising-title {
+    line-height: 51px;
+}
+
+.sml-info-service-pack-title {
+    font-size: 35px;
+}
+
+.sml-info-service-pack-we-top {
+    line-height: 23px;
+}
+
+.sml-info-service-slogan {
+    margin: 22px 0 11px 0;
+    font-size: 28px;
+    color: rgba(120, 120, 120, 255);
+}
+
+.sml-info-service-we-top {
+    margin-bottom: 27px;
+    padding: 9px 0 8px 21px;
+    border-left: 3px solid #5867f5;
+    font-size: 18px;
+    color: rgba(120, 120, 120, 255);
+}
+
+.sml-info-service-logo-we-top {
+    width: 354px;
+    line-height: 25px;
+}
+
+.sml-info-service-advertising-we-top {
+    margin: 22px 0 37px 0;
+    line-height: 29px;
+}
+
+.sml-info-service-text {
+    width: 466px;
+    padding: 31px 0 0 27px;
+}
+
+.wrapper-sml-info-service {
+    display: flex;
+    flex-direction: column;
+}
+
+.cost {
     width: 320px;
+    margin-top: auto;
     border-radius: 30px;
     border: 0px;
-    background:linear-gradient(to right, #4929f0, #4ecaeb);
+    background: linear-gradient(to right, #4929f0, #4ecaeb);
     min-height: 65px;
     font-family: 'Stolzl Book';
     font-size: 17px;
     color: #fff;
-    
 }
 
 .cost:hover,
 .cost:focus {
     box-shadow: 0 3px 15px rgb(74, 67, 239);
 }
+
+.service-big-img {
+    align-self: center;
+    margin: 0 auto;
+}
+
+.service-advertising-big-img {
+    margin: 55px 0;
+}
+
+.service-logo-big-img {
+    align-self: center;
+    /* margin: 0 auto; */
+}
+
+.service-pack-big-img {
+    position: absolute;
+    top: 10%;
+    left: 37%;
+}
+
 /* service-about!! */
 
 /* big-info-service */
